[gd_scene load_steps=2 format=3 uid="uid://nqwjjuweyf4k"]

[ext_resource type="Script" uid="uid://dyryonqls6omr" path="res://ui/lobby/lobby_menu.gd" id="1_grfnr"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grfnr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -99.0
offset_right = 160.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player  Info"

[node name="PlayerInfo" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UsernameInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Username"
expand_to_text_length = true

[node name="PasswordInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Password"
expand_to_text_length = true
secret = true

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="HostPanel" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HostPanel"]
layout_mode = 2
text = "Port"

[node name="HostPortInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HostPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "7777"
expand_to_text_length = true

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HostPanel"]
layout_mode = 2
text = "Max Players"

[node name="PlayerCount" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/HostPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 8.0
value = 2.0
rounded = true

[node name="HostButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HostPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Host
"

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="JoinPanel" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinAddressInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/JoinPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "IP Address"
expand_to_text_length = true

[node name="JoinPortInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/JoinPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "7777"
placeholder_text = "Port"
expand_to_text_length = true

[node name="JoinButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/JoinPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HostPanel/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/JoinPanel/JoinButton" to="." method="_on_join_button_pressed"]
